package app;

public class PizzaFactory {

    public Pizza create(String name){
        return null;
    }
    
}
